--- a/templates/about.html
+++ b/templates/about.html
@@ -159,7 +159,7 @@
             </div>
           </div>
         </div>
-  
+
         <!-- Card 2: Integrity and Excellence -->
         <div class="col-md-4">
           <div class="card border-0 approach-card">
@@ -170,7 +170,7 @@
             </div>
           </div>
         </div>
-  
+
         <!-- Card 3: Patient Safety -->
         <div class="col-md-4">
           <div class="card border-0 approach-card">
@@ -188,17 +188,75 @@
   <section>
     <div class="text-center mt-2 quality-section">
       <h2 class="title-color">OUR QUALITY OBJECTIVES</h2>
-      <br>
+      <br />
       <div class="quality-list">
         <ul>
-          <li><i class="fa-solid fa-angles-right"></i> Regularly upgrade the quality services provided by the Hospital.</li>
-          <li><i class="fa-solid fa-angles-right"></i> Provide satisfactory customer service through continuous improvements of service quality.</li>
-          <li><i class="fa-solid fa-angles-right"></i> Achieve, sustain, and improve its reputation for excellence in medical treatment by using modern and effective methods.</li>
-          <li><i class="fa-solid fa-angles-right"></i> Continuously explore developments in surgery, medicine, and diagnosis, adopting the latest methods and medicines accordingly.</li>
-          <li><i class="fa-solid fa-angles-right"></i> Ensure the availability of adequate resources to sustain and maintain the quality assurance programme of the Hospital and continually improve its effectiveness.</li>
+          <li>
+            <i class="fa-solid fa-angles-right"></i> Regularly upgrade the quality services provided by the Hospital.
+          </li>
+          <li>
+            <i class="fa-solid fa-angles-right"></i> Provide satisfactory customer service through continuous improvements of service quality.
+          </li>
+          <li>
+            <i class="fa-solid fa-angles-right"></i> Achieve, sustain, and improve its reputation for excellence in medical treatment by using modern and effective methods.
+          </li>
+          <li>
+            <i class="fa-solid fa-angles-right"></i> Continuously explore developments in surgery, medicine, and diagnosis, adopting the latest methods and medicines accordingly.
+          </li>
+          <li>
+            <i class="fa-solid fa-angles-right"></i> Ensure the availability of adequate resources to sustain and maintain the quality assurance programme of the Hospital and continually improve its effectiveness.
+          </li>
         </ul>
       </div>
     </div>
   </section>
 
+  <!-- Start About Us Section -->
+  <section class="section clients">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-lg-7">
+          <div class="section-title text-center">
+            <h2>GOVERNMENT PROJECTS</h2>
+            <div class="divider mx-auto my-4"></div>
+            <p>We collaborate with leading eye hospital specialists and institutions to bring the best vision care to our patients. Their expertise and commitment help us ensure the highest standards of eye health and treatment.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Carousel Section -->
+    <div class="container">
+      <div id="clientCarousel" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <!-- Slide 1 -->
+          <div class="carousel-item active">
+            <div class="row clients-logo justify-content-center">
+              <div class="col-lg-3 col-md-3 col-6">
+                <div class="client-thumb">
+                  <img src="static/images/echs.png" alt="Partner 1" class="img-fluid" />
+                </div>
+              </div>
+              <div class="col-lg-3 col-md-3 col-6">
+                <div class="client-thumb">
+                  <img src="static/images/medisep.png" alt="Partner 2" class="img-fluid" />
+                </div>
+              </div>
+              <div class="col-lg-3 col-md-3 col-6">
+                <div class="client-thumb">
+                  <img src="static/images/cghs.png" alt="Partner 3" class="img-fluid" />
+                </div>
+              </div>
+              <div class="col-lg-3 col-md-3 col-6">
+                <div class="client-thumb">
+                  <img src="static/images/kasp.png" alt="Partner 4" class="img-fluid" />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- End About Us Section -->
 {% endblock %}
