--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zxx">
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Orbitor,business,company,agency,modern,bootstrap4,tech,software" />
     <meta name="author" content="themefisher.com" />
 
@@ -12,7 +12,7 @@
     </title>
 
     <!-- Favicon -->
-    <link rel="icon" type="image/jpeg" sizes="32x16" href="static/images/karunyalogo.jpeg">
+    <link rel="icon" type="image/jpeg" sizes="32x16" href="static/images/karunyalogo.jpeg" />
 
     <!-- bootstrap.min css -->
     <link rel="stylesheet" href="static/plugins/bootstrap/css/bootstrap.min.css" />
@@ -27,9 +27,8 @@
 
     <!-- Font Awesome CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet" />
-
   </head>
 
   <body id="top">
@@ -84,7 +83,7 @@
                 <a class="nav-link dropdown-toggle" href="services" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Facilities <i class="icofont-thin-down"></i></a>
                 <ul class="dropdown-menu" aria-labelledby="dropdown02">
                   <li>
-                    <a class="dropdown-item" href="">Insurance</a>
+                    <a class="dropdown-item" href="insurances">Insurance</a>
                   </li>
                   <li>
                     <a class="dropdown-item" href="">Optical Shops</a>
@@ -115,11 +114,19 @@
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="centers">Centers</a>
+                <a class="nav-link" href="centres">Centres</a>
               </li>
 
-              <li class="nav-item">
-                <a class="nav-link" href="gallery">Gallery</a>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="department" id="dropdown02" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Gallery <i class="icofont-thin-down"></i></a>
+                <ul class="dropdown-menu" aria-labelledby="dropdown03">
+                  <li>
+                    <a class="dropdown-item" href="events">News and Events</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="gallery">Gallery</a>
+                  </li>
+                </ul>
               </li>
 
               <li class="nav-item">
@@ -139,7 +146,7 @@
     <!-- Footer Start -->
     <footer class="footer section bg-light">
       <div class="container">
-        <div class="row">
+        <div class="row mb-2">
           <div class="col-lg-4 mr-auto col-sm-6">
             <div class="widget mb-5 mb-lg-0">
               <p>Providing world-class eye hospital with advanced technology and compassionate service to restore and enhance vision.</p>
@@ -171,12 +178,6 @@
                 <li>
                   <a href="#">Retina Treatment</a>
                 </li>
-                <li>
-                  <a href="#">Glaucoma Treatment</a>
-                </li>
-                <li>
-                  <a href="#">Pediatric Eye Hospital</a>
-                </li>
               </ul>
             </div>
           </div>
@@ -186,9 +187,6 @@
               <h4 class="text-capitalize mb-3">Quick Links</h4>
               <div class="divider mb-4"></div>
               <ul class="list-unstyled footer-menu lh-35">
-                <li>
-                  <a href="#">Patient Portal</a>
-                </li>
                 <li>
                   <a href="#">Insurance & Billing</a>
                 </li>
@@ -232,7 +230,7 @@
             <div class="col-lg-6">
               <div class="copyright">
                 &copy; Copyright Reserved to <span class="text-color">Karunya Eye Hospital.</span>
-                <br>Designed and Developed by <b href="https://inspirezesttechnologies.com/">InspireZest Technologies</b>
+                <br />Designed and Developed by <b href="https://inspirezesttechnologies.com/">InspireZest Technologies</b>
               </div>
             </div>
             <div class="col-lg-6">
@@ -246,7 +244,7 @@
           </div>
           <div class="row">
             <div class="col-lg-4">
-              <a class="backtop js-scroll-trigger" href="#top"><i class="fa-solid fa-angles-up"></i></a>
+              <a class="backtop js-scroll-trigger" href="#top" style="border-radius: 0px;"><i class="fa-solid fa-angles-up"></i></a>
             </div>
           </div>
         </div>
@@ -254,9 +252,9 @@
     </footer>
     <!-- Footer End -->
 
-    <!--        
+    <!--          
     Essential Scripts
-    =====================================       -->
+    =====================================         -->
 
     <!-- Main jQuery -->
     <script src="static/plugins/jquery/jquery.js"></script>
