--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -31,78 +31,192 @@
         </div>
       </div>
 
-      <div class="col-12 text-center mb-5">
-        <div class="btn-group btn-group-toggle" data-toggle="buttons">
-          <label class="btn active"><input type="radio" name="shuffle-filter" value="all" checked="checked" />All</label>
-          <label class="btn"><input type="radio" name="shuffle-filter" value="cat1" />Surgeries</label>
-          <label class="btn"><input type="radio" name="shuffle-filter" value="cat2" />Facilities</label>
-          <label class="btn"><input type="radio" name="shuffle-filter" value="cat3" />Patient Care</label>
-          <label class="btn"><input type="radio" name="shuffle-filter" value="cat4" />Events</label>
+      <div class="row shuffle-wrapper portfolio-gallery">
+        <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat1"]'>
+          <div class="gallery-box">
+            <img src="static/images/gallery/17.jpg" alt="surgery-image" class="img-fluid w-100" />
+          </div>
+        </div>
+        <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat1"]'>
+          <div class="gallery-box">
+            <img src="static/images/gallery/16.jpg" alt="surgery-image" class="img-fluid w-100" />
+          </div>
+        </div>
+        <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat2"]'>
+          <div class="gallery-box">
+            <img src="static/images/gallery/15.jpg" alt="facility-image" class="img-fluid w-100" />
+          </div>
+        </div>
+        <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat2"]'>
+          <div class="gallery-box">
+            <img src="static/images/gallery/14.jpg" alt="facility-image" class="img-fluid w-100" />
+          </div>
+        </div>
+        <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat3"]'>
+          <div class="gallery-box">
+            <img src="static/images/gallery/13.jpg" alt="patient-care-image" class="img-fluid w-100" />
+          </div>
+        </div>
+        <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat3"]'>
+          <div class="gallery-box">
+            <img src="static/images/gallery/12.jpg" alt="patient-care-image" class="img-fluid w-100" />
+          </div>
+        </div>
+        <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat4"]'>
+          <div class="gallery-box">
+            <img src="static/images/gallery/11.jpg" alt="event-image" class="img-fluid w-100" />
+          </div>
+        </div>
+        <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat4"]'>
+          <div class="gallery-box">
+            <img src="static/images/gallery/26 N.jpg" alt="event-image" class="img-fluid w-100" />
+          </div>
+        </div>
+        <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat1"]'>
+          <div class="gallery-box">
+            <img src="static/images/gallery/27 O.jpg" alt="event-image" class="img-fluid w-100" />
+          </div>
+        </div>
+        <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat2"]'>
+          <div class="gallery-box">
+            <img src="static/images/gallery/28 O.jpg" alt="event-image" class="img-fluid w-100" />
+          </div>
+        </div>
+        <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat3"]'>
+          <div class="gallery-box">
+            <img src="static/images/gallery/29 O.jpg" alt="event-image" class="img-fluid w-100" />
+          </div>
+        </div>
+        <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat4"]'>
+          <div class="gallery-box">
+            <img src="static/images/gallery/30 P.jpg" alt="event-image" class="img-fluid w-100" />
+          </div>
         </div>
       </div>
 
       <div class="row shuffle-wrapper portfolio-gallery">
         <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat1"]'>
           <div class="gallery-box">
-            <img src="https://img.freepik.com/free-photo/eye-doctor-with-female-patient-examination-modern-clinic-ophthalmologist-is-using-special-medical-equipment-eye-health_657921-161.jpg?t=st=1740201904~exp=1740205504~hmac=3b7c05dad3155fb482f16b7a81d1e89c5bddb2a7a38bbf45adc932081b8d05a6&w=1060" alt="surgery-image" class="img-fluid w-100" />
+            <img src="static/images/gallery/31 P.jpg" alt="surgery-image" class="img-fluid w-100" />
           </div>
         </div>
         <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat1"]'>
           <div class="gallery-box">
-            <img src="https://img.freepik.com/free-photo/little-girl-checking-up-her-sight-ophthalmology-center_1303-27499.jpg?t=st=1740201919~exp=1740205519~hmac=584e23c00adc9cce4fa975b4bc09bbb5367f0a69b28c66b2036964795366643e&w=1060" alt="surgery-image" class="img-fluid w-100" />
+            <img src="static/images/gallery/32 P.jpg" alt="surgery-image" class="img-fluid w-100" />
           </div>
         </div>
         <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat2"]'>
           <div class="gallery-box">
-            <img src="https://img.freepik.com/free-photo/woman-getting-eye-exam-ophthalmologist-office_52683-137895.jpg?t=st=1740201924~exp=1740205524~hmac=032b9696726ea24775d6b519396ccb84532783252a363bb5d5b6d4b780ca9eab&w=1060" alt="facility-image" class="img-fluid w-100" />
+            <img src="static/images/gallery/33 Q.jpg" alt="facility-image" class="img-fluid w-100" />
           </div>
         </div>
         <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat2"]'>
           <div class="gallery-box">
-            <img src="https://img.freepik.com/free-photo/little-girl-checking-up-her-sight-ophthalmology-center-female-optometrist-doing-sight-testing-brunette-girl-wearing-grey-jacket-black-shirt_1157-51261.jpg?t=st=1740201934~exp=1740205534~hmac=725c75520b79f638e5493cedf53bbb2b12a9ed413832725bf10ddb084f36b96e&w=1060" alt="facility-image" class="img-fluid w-100" />
+            <img src="static/images/gallery/34 Q.jpg" alt="facility-image" class="img-fluid w-100" />
           </div>
         </div>
         <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat3"]'>
           <div class="gallery-box">
-            <img src="https://img.freepik.com/free-photo/ophthalmologist-examining-woman-with-optometrist-trial-frame-female-patient-check-vision-ophthalmological-clinic_657921-169.jpg?ga=GA1.1.1252956197.1738567597&semt=ais_hybrid" alt="patient-care-image" class="img-fluid w-100" />
+            <img src="static/images/gallery/35 Q.jpg" alt="patient-care-image" class="img-fluid w-100" />
           </div>
         </div>
         <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat3"]'>
           <div class="gallery-box">
-            <img src="https://img.freepik.com/free-photo/client-ophthalmologist-s-office_52683-135811.jpg?t=st=1740202027~exp=1740205627~hmac=cdd82014d7404d504cf6bd4a2a3974cbd5cdb113e96c984226a6bbf610a4a5d3&w=1060" alt="patient-care-image" class="img-fluid w-100" />
+            <img src="static/images/gallery/36 Q.jpg" alt="patient-care-image" class="img-fluid w-100" />
           </div>
         </div>
         <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat4"]'>
           <div class="gallery-box">
-            <img src="https://img.freepik.com/free-photo/man-having-ophthalmology-checking_23-2149082423.jpg?t=st=1740202049~exp=1740205649~hmac=51e6fe9ea3da80ebe7b171015713f8c61660f4d125e0725c506398a07ba22ea5&w=1060" alt="event-image" class="img-fluid w-100" />
+            <img src="static/images/gallery/37 Q.jpg" alt="event-image" class="img-fluid w-100" />
           </div>
         </div>
         <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat4"]'>
           <div class="gallery-box">
-            <img src="https://img.freepik.com/free-photo/high-angle-woman-getting-her-eyes-checked_23-2150758574.jpg?t=st=1740202081~exp=1740205681~hmac=df260fcbb96811146ae9b2502c3afbe047074420b1fea671ad1af84bc9a34953&w=996" alt="event-image" class="img-fluid w-100" />
+            <img src="static/images/gallery/38 Q.jpg" alt="event-image" class="img-fluid w-100" />
           </div>
         </div>
         <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat1"]'>
           <div class="gallery-box">
-            <img src="https://img.freepik.com/free-photo/portrait-cute-caucasian-female-patient-sitting-optometrist-office-waiting-start-procedure-check-her-vision-with-microbioscope-sitting-yellow-wall-ophthalmology-concept_176420-6733.jpg?t=st=1740202099~exp=1740205699~hmac=255ebb2b2c5aa6012811fbfa79ba4bedb7442948ea34ae587dc1db678ae2f363&w=1060" alt="surgery-image" class="img-fluid w-100" />
+            <img src="static/images/gallery/39 Q.jpg" alt="event-image" class="img-fluid w-100" />
           </div>
         </div>
         <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat2"]'>
           <div class="gallery-box">
-            <img src="https://img.freepik.com/free-photo/close-up-female-dentist-looking-through-dental-microscope_329181-20740.jpg?t=st=1740202122~exp=1740205722~hmac=ea4fad206b2188096c9059e9806e93d543dd7174386ae9bc2e09d0363d6ad35e&w=1060" alt="facility-image" class="img-fluid w-100" />
+            <img src="static/images/gallery/40 Q.jpg" alt="event-image" class="img-fluid w-100" />
           </div>
         </div>
         <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat3"]'>
           <div class="gallery-box">
-            <img src="https://img.freepik.com/free-photo/doctor-testing-patient-eyesight_23-2149229995.jpg?t=st=1740202145~exp=1740205745~hmac=936f3cdf03de502cd9ff0bc3e52618d4229e5887f117236904587c9651356736&w=1060" alt="patient-care-image" class="img-fluid w-100" />
+            <img src="static/images/gallery/41 Q.jpg" alt="event-image" class="img-fluid w-100" />
           </div>
         </div>
         <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat4"]'>
           <div class="gallery-box">
-            <img src="https://img.freepik.com/free-photo/client-ophthalmologist-s-office_52683-135817.jpg?t=st=1740202166~exp=1740205766~hmac=9f2df2d1174859b9a8fea33bddc134cf095e0dfd5ef3232085e05574e479d056&w=1060" alt="event-image" class="img-fluid w-100" />
+            <img src="static/images/gallery/42 Q.jpg" alt="event-image" class="img-fluid w-100" />
           </div>
         </div>
       </div>
     </div>
   </section>
+
+  <div id="imageOverlay" class="image-overlay">
+    <span class="image-overlay-close" onclick="closeOverlay()">&times;</span>
+    <img id="overlayImage" src="" alt="Full View" />
+  </div>
+
+  <script>
+    document.addEventListener('DOMContentLoaded', function () {
+      const images = document.querySelectorAll('.gallery-box img');
+      const overlay = document.getElementById('imageOverlay');
+      const overlayImage = document.getElementById('overlayImage');
+  
+      images.forEach(image => {
+        image.addEventListener('click', () => {
+          overlayImage.src = image.src;
+          overlay.classList.add('active');
+        });
+      });
+    });
+  
+    function closeOverlay() {
+      document.getElementById('imageOverlay').classList.remove('active');
+    }
+  </script>
+
+  <style>
+    .image-overlay {
+      display: none;
+      position: fixed;
+      z-index: 1050;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.5);
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .image-overlay img {
+      max-width: 90%;
+      max-height: 90%;
+      border-radius: 8px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.7);
+    }
+  
+    .image-overlay.active {
+      display: flex;
+    }
+  
+    .image-overlay-close {
+      position: absolute;
+      top: 20px;
+      right: 30px;
+      font-size: 30px;
+      color: #fff;
+      cursor: pointer;
+      z-index: 1100;
+    }
+  </style>
+  
 {% endblock %}
