--- a/templates/services.html
+++ b/templates/services.html
@@ -97,10 +97,9 @@
           </div>
         </div>
         <div class="col-lg-5 text-center">
-          <img src="assets/images/eye-care-banner.jpg" alt="Eye hospital" class="img-fluid rounded">
+          <img src="assets/images/eye-care-banner.jpg" alt="Eye hospital" class="img-fluid rounded" />
         </div>
       </div>
     </div>
   </section>
-
 {% endblock %}
