--- a/static/css/style.css
+++ b/static/css/style.css
@@ -253,7 +253,7 @@ input[type="email"]:focus, input[type="password"]:focus, input[type="text"]:focu
   right: 0;
   width: 100%;
   height: 100%;
-  opacity: 0.9;
+  opacity: 0.5;
   background: #005e79;
 }
 
@@ -535,7 +535,7 @@ a:focus {
 }
 
 .appoinment-content img {
-  width: 85%;
+  width: 100%;
 }
 
 .appoinment-content .emergency {
@@ -1526,4 +1526,17 @@ a:focus {
   border-radius: 5px;
   width: 100%;
   text-align: left;
+}
+
+.gallery-img-custom {
+  height: 200px;
+  width: 100%;
+  object-fit: fill;
+}
+
+.gallery-box img {
+  height: 200px;
+  width: 100%;
+  object-fit: cover;
+  object-position: center;
 }
