--- a/templates/index.html
+++ b/templates/index.html
@@ -309,7 +309,7 @@
                 <textarea name="message" id="message" class="form-control" rows="6" placeholder="Describe Your Eye Concern"></textarea>
               </div>
 
-              <a class="btn btn-main btn-round-full" href="appoinment.html">Book Your Appointment <i class="fa-solid fa-angles-right text-white"></i></a>
+              <a class="btn btn-main btn-round-full" href="appoinment.html" style="width: 100%;">Book Your Appointment <i class="fa-solid fa-angles-right text-white"></i></a>
             </form>
           </div>
         </div>
@@ -330,78 +330,29 @@
       </div>
     </div>
 
+    <section class="section testimonials">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-lg-12 testimonial-wrap-2">
+          {% for testimonial in testimonials %}
           <div class="testimonial-block style-2 gray-bg">
             <i class="icofont-quote-right"></i>
-
+    
             <div class="testimonial-thumb">
-              <img src="static/images/team/test-thumb1.jpg" alt="" class="img-fluid" />
+              <img src="{{ testimonial.image.url }}" alt="" class="img-fluid" />
             </div>
-
+    
             <div class="client-info">
-              <h4>Excellent Eye Hospital!</h4>
-              <span>John Partho</span>
-              <p>The doctors and staff provided top-notch eye hospital. I had my vision corrected with precision and care. Highly recommended!</p>
+              <h4>{{ testimonial.title }}</h4>
+              <span>{{ testimonial.name }}</span>
+              <p>{{ testimonial.message }}</p>
             </div>
           </div>
-
-          <div class="testimonial-block style-2 gray-bg">
-            <div class="testimonial-thumb">
-              <img src="static/images/team/test-thumb2.jpg" alt="" class="img-fluid" />
-            </div>
-
-            <div class="client-info">
-              <h4>Highly Skilled Specialists!</h4>
-              <span>Mullar Sarth</span>
-              <p>From consultation to surgery, the process was seamless. The specialists here truly care about their patients' well-being.</p>
-            </div>
-            <i class="icofont-quote-right"></i>
-          </div>
-
-          <div class="testimonial-block style-2 gray-bg">
-            <div class="testimonial-thumb">
-              <img src="static/images/team/test-thumb3.jpg" alt="" class="img-fluid" />
-            </div>
-
-            <div class="client-info">
-              <h4>Exceptional Support!</h4>
-              <span>Kolis Mullar</span>
-              <p>The staff was very supportive and helped me understand my treatment plan. My vision has never been clearer!</p>
-            </div>
-            <i class="icofont-quote-right"></i>
-          </div>
-
-          <div class="testimonial-block style-2 gray-bg">
-            <div class="testimonial-thumb">
-              <img src="static/images/team/test-thumb4.jpg" alt="" class="img-fluid" />
-            </div>
-
-            <div class="client-info">
-              <h4>Comfortable Experience!</h4>
-              <span>Partho Sarothi</span>
-              <p class="mt-4">The atmosphere at the hospital was calm and comforting. The team ensured I was comfortable throughout my treatment.</p>
-            </div>
-            <i class="icofont-quote-right"></i>
-          </div>
-
-          <div class="testimonial-block style-2 gray-bg">
-            <div class="testimonial-thumb">
-              <img src="static/images/team/test-thumb1.jpg" alt="" class="img-fluid" />
-            </div>
-
-            <div class="client-info">
-              <h4>Advanced Treatment!</h4>
-              <span>Kolis Mullar</span>
-              <p>The latest technology used for my eye surgery made the process quick and painless. Truly a great place for eye hospital !</p>
-            </div>
-            <i class="icofont-quote-right"></i>
-          </div>
+          {% endfor %}
         </div>
       </div>
     </div>
-  </section>
+    </section>
 
   <!-- Start About Us Section -->
   <section class="section clients">
@@ -409,64 +360,43 @@
       <div class="row justify-content-center">
         <div class="col-lg-7">
           <div class="section-title text-center">
-            <h2>Our Trusted Eye Hospital Partners</h2>
+            <h2>GOVERNMENT PROJECTS</h2>
             <div class="divider mx-auto my-4"></div>
             <p>We collaborate with leading eye hospital specialists and institutions to bring the best vision care to our patients. Their expertise and commitment help us ensure the highest standards of eye health and treatment.</p>
           </div>
         </div>
       </div>
     </div>
-
+  
+    <!-- Carousel Section -->
     <div class="container">
-      <div class="row clients-logo">
-        <div class="col-lg-2">
-          <div class="client-thumb">
-            <img src="static/images/about/1.png" alt="Partner 1" class="img-fluid" />
-          </div>
-        </div>
-        <div class="col-lg-2">
-          <div class="client-thumb">
-            <img src="static/images/about/2.png" alt="Partner 2" class="img-fluid" />
-          </div>
-        </div>
-        <div class="col-lg-2">
-          <div class="client-thumb">
-            <img src="static/images/about/3.png" alt="Partner 3" class="img-fluid" />
-          </div>
-        </div>
-        <div class="col-lg-2">
-          <div class="client-thumb">
-            <img src="static/images/about/4.png" alt="Partner 4" class="img-fluid" />
-          </div>
-        </div>
-        <div class="col-lg-2">
-          <div class="client-thumb">
-            <img src="static/images/about/5.png" alt="Partner 5" class="img-fluid" />
-          </div>
-        </div>
-        <div class="col-lg-2">
-          <div class="client-thumb">
-            <img src="static/images/about/6.png" alt="Partner 6" class="img-fluid" />
-          </div>
-        </div>
-        <div class="col-lg-2">
-          <div class="client-thumb">
-            <img src="static/images/about/3.png" alt="Partner 7" class="img-fluid" />
-          </div>
-        </div>
-        <div class="col-lg-2">
-          <div class="client-thumb">
-            <img src="static/images/about/4.png" alt="Partner 8" class="img-fluid" />
-          </div>
-        </div>
-        <div class="col-lg-2">
-          <div class="client-thumb">
-            <img src="static/images/about/5.png" alt="Partner 9" class="img-fluid" />
-          </div>
-        </div>
-        <div class="col-lg-2">
-          <div class="client-thumb">
-            <img src="static/images/about/6.png" alt="Partner 10" class="img-fluid" />
+      <div id="clientCarousel" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+  
+          <!-- Slide 1 -->
+          <div class="carousel-item active">
+            <div class="row clients-logo justify-content-center">
+              <div class="col-lg-3 col-md-3 col-6">
+                <div class="client-thumb">
+                  <img src="static/images/echs.png" alt="Partner 1" class="img-fluid" />
+                </div>
+              </div>
+              <div class="col-lg-3 col-md-3 col-6">
+                <div class="client-thumb">
+                  <img src="static/images/medisep.png" alt="Partner 2" class="img-fluid" />
+                </div>
+              </div>
+              <div class="col-lg-3 col-md-3 col-6">
+                <div class="client-thumb">
+                  <img src="static/images/cghs.png" alt="Partner 3" class="img-fluid" />
+                </div>
+              </div>
+              <div class="col-lg-3 col-md-3 col-6">
+                <div class="client-thumb">
+                  <img src="static/images/kasp.png" alt="Partner 4" class="img-fluid" />
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
