--- a/templates/managements.html
+++ b/templates/managements.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-{% load static %}
+  {% load static %}
   <section class="page-title bg-1">
     <div class="overlay"></div>
     <div class="container">
@@ -33,40 +33,40 @@
         <!-- Card 1 -->
         <div class="col-lg-3 col-md-6 mb-4">
           <div class="card border-0 shadow">
-            <img src="https://cdn-icons-png.flaticon.com/512/4205/4205906.png" class="card-img-top" alt="Management 1">
+            <img src="https://cdn-icons-png.flaticon.com/512/4205/4205906.png" class="card-img-top" alt="Management 1" />
             <div class="card-body text-center">
               <h5 class="card-title mb-0">Dr. John Doe</h5>
               <small class="text-muted">Chief Medical Officer</small>
             </div>
           </div>
         </div>
-        
+
         <!-- Card 2 -->
         <div class="col-lg-3 col-md-6 mb-4">
           <div class="card border-0 shadow">
-            <img src="https://cdn-icons-png.flaticon.com/512/4205/4205906.png" class="card-img-top" alt="Management 2">
+            <img src="https://cdn-icons-png.flaticon.com/512/4205/4205906.png" class="card-img-top" alt="Management 2" />
             <div class="card-body text-center">
               <h5 class="card-title mb-0">Ms. Jane Smith</h5>
               <small class="text-muted">Managing Director</small>
             </div>
           </div>
         </div>
-        
+
         <!-- Card 3 -->
         <div class="col-lg-3 col-md-6 mb-4">
           <div class="card border-0 shadow">
-            <img src="https://cdn-icons-png.flaticon.com/512/4205/4205906.png" class="card-img-top" alt="Management 3">
+            <img src="https://cdn-icons-png.flaticon.com/512/4205/4205906.png" class="card-img-top" alt="Management 3" />
             <div class="card-body text-center">
               <h5 class="card-title mb-0">Dr. Emily Brown</h5>
               <small class="text-muted">Director of Operations</small>
             </div>
           </div>
         </div>
-        
+
         <!-- Card 4 -->
         <div class="col-lg-3 col-md-6 mb-4">
           <div class="card border-0 shadow">
-            <img src="https://cdn-icons-png.flaticon.com/512/4205/4205906.png" class="card-img-top" alt="Management 4">
+            <img src="https://cdn-icons-png.flaticon.com/512/4205/4205906.png" class="card-img-top" alt="Management 4" />
             <div class="card-body text-center">
               <h5 class="card-title mb-0">Mr. Michael Lee</h5>
               <small class="text-muted">Finance Head</small>
