--- a/templates/specialities.html
+++ b/templates/specialities.html
@@ -20,18 +20,18 @@
   </section>
 
   <!-- Specialties Start -->
-<section class="section service gray-bg">
+  <section class="section service gray-bg">
     <div class="container">
       <div class="row justify-content-left">
         <div class="col-lg-7 text-left">
           <div class="section-title">
-            <h2>Our Specialities</h2> 
+            <h2>Our Specialities</h2>
             <div class="divider mx-auto my-4"></div>
             <p>Delivering comprehensive and advanced eye hospital services with cutting-edge technology and expertise.</p>
           </div>
         </div>
       </div>
-  
+
       <div class="row">
         <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="service-item mb-4">
@@ -44,7 +44,7 @@
             </div>
           </div>
         </div>
-        
+
         <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="service-item mb-4">
             <div class="icon d-flex align-items-center">
@@ -56,7 +56,7 @@
             </div>
           </div>
         </div>
-        
+
         <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="service-item mb-4">
             <div class="icon d-flex align-items-center">
@@ -68,7 +68,7 @@
             </div>
           </div>
         </div>
-  
+
         <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="service-item mb-4">
             <div class="icon d-flex align-items-center">
@@ -80,7 +80,7 @@
             </div>
           </div>
         </div>
-  
+
         <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="service-item mb-4">
             <div class="icon d-flex align-items-center">
@@ -92,7 +92,7 @@
             </div>
           </div>
         </div>
-  
+
         <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="service-item mb-4">
             <div class="icon d-flex align-items-center">
@@ -104,7 +104,7 @@
             </div>
           </div>
         </div>
-                <div class="col-lg-4 col-md-6 col-sm-6">
+        <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="service-item mb-4">
             <div class="icon d-flex align-items-center">
               <i class="icofont-eye text-lg"></i>
@@ -115,7 +115,7 @@
             </div>
           </div>
         </div>
-        
+
         <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="service-item mb-4">
             <div class="icon d-flex align-items-center">
@@ -127,7 +127,7 @@
             </div>
           </div>
         </div>
-        
+
         <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="service-item mb-4">
             <div class="icon d-flex align-items-center">
@@ -139,7 +139,7 @@
             </div>
           </div>
         </div>
-  
+
         <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="service-item mb-4">
             <div class="icon d-flex align-items-center">
@@ -151,7 +151,7 @@
             </div>
           </div>
         </div>
-  
+
         <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="service-item mb-4">
             <div class="icon d-flex align-items-center">
@@ -163,7 +163,7 @@
             </div>
           </div>
         </div>
-  
+
         <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="service-item mb-4">
             <div class="icon d-flex align-items-center">
@@ -175,7 +175,7 @@
             </div>
           </div>
         </div>
-                <div class="col-lg-4 col-md-6 col-sm-6">
+        <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="service-item mb-4">
             <div class="icon d-flex align-items-center">
               <i class="icofont-eye text-lg"></i>
@@ -186,7 +186,7 @@
             </div>
           </div>
         </div>
-        
+
         <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="service-item mb-4">
             <div class="icon d-flex align-items-center">
@@ -198,7 +198,7 @@
             </div>
           </div>
         </div>
-        
+
         <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="service-item mb-4">
             <div class="icon d-flex align-items-center">
@@ -210,7 +210,7 @@
             </div>
           </div>
         </div>
-  
+
         <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="service-item mb-4">
             <div class="icon d-flex align-items-center">
@@ -222,7 +222,7 @@
             </div>
           </div>
         </div>
-  
+
         <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="service-item mb-4">
             <div class="icon d-flex align-items-center">
@@ -234,7 +234,7 @@
             </div>
           </div>
         </div>
-  
+
         <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="service-item mb-4">
             <div class="icon d-flex align-items-center">
@@ -246,7 +246,7 @@
             </div>
           </div>
         </div>
-                <div class="col-lg-4 col-md-6 col-sm-6">
+        <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="service-item mb-4">
             <div class="icon d-flex align-items-center">
               <i class="icofont-lens text-lg"></i>
@@ -257,7 +257,7 @@
             </div>
           </div>
         </div>
-  
+
         <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="service-item mb-4">
             <div class="icon d-flex align-items-center">
@@ -269,21 +269,19 @@
             </div>
           </div>
         </div>
-  
+
         <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="service-item mb-4">
             <div class="icon d-flex align-items-center">
               <i class="icofont-retina-scan text-lg"></i>
-              <h4 class="mt-3 mb-3">Private Health Insurance/TPAs Services 
-                (For Cashless/Reimbursement)
-                Contact Lens Clinic</h4>
+              <h4 class="mt-3 mb-3">Private Health Insurance/TPAs Services (For Cashless/Reimbursement) Contact Lens Clinic</h4>
             </div>
             <div class="content">
               <p class="mb-4">Advanced treatments for retinal diseases and disorders.</p>
             </div>
           </div>
         </div>
-  
+
         <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="service-item mb-4">
             <div class="icon d-flex align-items-center">
@@ -299,5 +297,4 @@
     </div>
   </section>
   <!-- End Specialties Section -->
-
 {% endblock %}
